# pockets

./: .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pockets_db.drawio
server/: Dockerfile  pyproject.toml
server/apps/pockets/: routers.py
server/apps/pockets/admin/: __init__.py  transaction.py  transaction_category.py
server/apps/pockets/constants/: __init__.py  errors.py  transaction.py  transaction_category.py
server/apps/pockets/filters/: __init__.py  transaction.py  transaction_category.py
server/apps/pockets/logic/: transaction.py
server/apps/pockets/models/: __init__.py  transaction.py  transaction_category.py
server/apps/pockets/serializers/: __init__.py  transaction.py  transaction_category.py
server/apps/pockets/viewsets/: __init__.py  transaction.py  transaction_category.py
server/apps/targets/: routers.py
server/apps/targets/constants/: errors.py
server/apps/targets/filters/: target.py
server/apps/targets/logic/: target_change_balance.py
server/apps/targets/models/: target.py  target_change_balance.py
server/apps/targets/serializers/: target.py  target_change_balance.py
server/apps/targets/viewsets/: target.py  target_change_balance.py
server/apps/users/admin/: __init__.py  user.py
server/apps/users/models/: user.py
server/apps/users/serializers/: __init__.py  user.py
server/apps/users/urls/: auth.py  users_urls.py
server/apps/users/views/: __init__.py
server/config/: api_urls.py  urls.py
server/config/migrations/pockets/: 0001_initial.py  0002_auto_20231108_1618.py  0003_alter_transaction_category.py  0004_alter_transaction_category.py
server/config/migrations/targets/: 0001_initial.py  0002_alter_target_term.py  (+4 more)
server/config/settings/: installed_apps.py  locale.py  settings.py
server/linters/: .flake8
(+13 files in other folders)
